updates made to order detail, notifications
